Fixing layout issues

--- a/css/graphicdesign.css
+++ b/css/graphicdesign.css
@@ -1,7 +1,3 @@
-header {
-   position: absolute;
-}
-
 h1 {
    display: block;
    margin-right: auto;
@@ -22,23 +18,15 @@ p {
    font-family: 'Lato', sans-serif;
 }
 
+#first {
+   margin-left: 48%
+}
+
 .card img {
    display: block;
    content: center;
    padding: 10px;
    width: 45%;
-}
-
-@media (max-width: 1500px) {
-  .card img {
-    display: inline;
-  }
-}
-
-@media (max-width: 880px) {
-  .card img {
-    width: 100%;
-  }
 }
 
 nav ul {
@@ -48,6 +36,8 @@ nav ul {
    text-align: center;
    font-size: 1.5rem;
    width: 100%;
+   display: flex;
+   justify-content: space-around;
 }
 
 nav ul li {
@@ -87,4 +77,28 @@ footer {
 
 .last-item {
    padding-bottom: 80px;
+}
+
+@media (max-width: 1500px) {
+  .card img {
+    display: inline;
+  }
+}
+
+@media (max-width: 1500px) {
+   header {
+    position: absolute;
+  }
+}
+
+@media (max-width: 880px) {
+  .card img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+   header {
+    position: static;
+  }
 }
