--- a/css/illustration.css
+++ b/css/illustration.css
@@ -1,7 +1,3 @@
-header {
-   position: absolute;
-}
-
 h1 {
    display: block;
    margin-right: auto;
@@ -29,18 +25,6 @@ p {
    width: 45%;
 }
 
-@media (max-width: 1500px) {
-  .card img {
-    display: inline;
-  }
-}
-
-@media (max-width: 880px) {
-  .card img {
-    width: 100%;
-  }
-}
-
 nav ul {
    padding: 20px 0 4px;
    background-color: #FFE3DB;
@@ -48,6 +32,8 @@ nav ul {
    text-align: center;
    font-size: 1.5rem;
    width: 100%;
+   display: flex;
+   justify-content: space-around;
 }
 
 nav ul li {
@@ -87,4 +73,28 @@ footer {
 
 .last-item {
    padding-bottom: 80px;
+}
+
+@media (max-width: 1500px) {
+  .card img {
+    display: inline;
+  }
+}
+
+@media (max-width: 1500px) {
+   header {
+    position: absolute;
+  }
+}
+
+@media (max-width: 880px) {
+  .card img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 800px) {
+   header {
+    position: static;
+  }
 }
